2001-09-04  Rodrigo Moya <rodrigo@gnome-db.org>

	* gda-value.[ch] (gda_value_stringify): new function

	* gda-field.c (gda_field_stringify): just call gda_value_stringify with
	the internal GdaValue

	* gda-data-model.[ch]: new abstract class to represent a data model.
	Implementations based on this class will follow, to make the GNOME-DB
	widgets able to get data not only from recordsets, but from anything
	that implements the GdaDataModel class

2001-08-31  Rodrigo Moya <rodrigo@gnome-db.org>

	* gda-field.[ch] (gda_field_get_user_data, gda_field_set_user_data):
	new functions for backwards compatibility
	
2001-08-28  Rodrigo Moya <rodrigo@gnome-db.org>

	* gda-value.[ch]: new files to make it easier to manage
	GNOME_Database_Value structures

	* gda-field.c: use the gda-value convenience functions to access our
	internal GNOME_Database_Value

2001-08-22  Rodrigo Moya <rodrigo@gnome-db.org>

	* gda-field.c (gda_field_copy_to_corba,
	gda_field_copy_to_corba_attributes): new CORBA utility functions

	* gda-field.c (gda_field_set_date_value, gda_field_get_date_value,
	gda_field_set_time_value, gda_field_get_time_value,
	gda_field_set_timestamp_value, gda_field_get_timestamp_value):
	implemented
	(gda_field_set_*_value): use ORBit_copy_value when setting a value

2001-08-22  Rodrigo Moya <rodrigo@gnome-db.org>

	* gda-init.c (gda_main_run, gda_main_quit): new functions

	* gda-xml-database.c: cleaned up all remaining GTK stuff

	* gda-xml-document.[ch]: switched to GObject
	(gda_xml_document_free): new function

	* gda-xml-list-item.[ch]: switched to GObject

2001-08-20  Rodrigo Moya <rodrigo@gnome-db.org>

	* gda-thread.[ch]: removed, since they're useless in GLib 2.0

	* gda-xml-item.[ch]:
	* gda-xml-bin-item.[ch]:
	* gda-xml-database.[ch]:
	* gda-xml-atom-item.[ch]: switched to GObject

2001-08-19  Rodrigo Moya <rodrigo@gnome-db.org>

	* gda-listener.[ch]: switched to GObject

	* gda-error.[ch]: switched to GObject
