@@ -22,8 +22,8 @@
 
 #include <gobject/gsignal.h>
 #include <gobject/gmarshal.h>
-#include <bonobo/bonobo-marshal.h>
 #include "gda-listener.h"
+#include "gda-marshal.h"
 
 #define PARENT_TYPE BONOBO_X_OBJECT_TYPE
 
@@ -79,7 +79,7 @@ gda_listener_class_init (GdaListenerClass * klass)
 			      G_SIGNAL_RUN_LAST,
 			      G_STRUCT_OFFSET (GdaListenerClass, notify_action),
 			      NULL, NULL,
-			      bonobo_marshal_VOID__POINTER_INT_POINTER,
+			      gda_marshal_VOID__POINTER_INT_POINTER,
 			      G_TYPE_NONE, 3, G_TYPE_INT,
 			      G_TYPE_POINTER, G_TYPE_POINTER);
 
