@@ -1,3 +1,9 @@
+2001-09-05  Rodrigo Moya <rodrigo@gnome-db.org>
+
+	* gda-marshal.list: new file for generating our marshal functions
+
+	* gda-init.c: include here the marshalers
+
 2001-09-04  Rodrigo Moya <rodrigo@gnome-db.org>
 
 	* gda-value.[ch] (gda_value_stringify): new function
